--- a/style/summary.css
+++ b/style/summary.css
@@ -2,9 +2,12 @@ body {
   font-family: Arial, sans-serif;
   text-align: center;
   margin-top: 50px;
-  background: #eaeaea;
 }
 
+h3 {
+  color: #2c3e50;
+  border-bottom: none;
+}
 #matchResult {
   font-size: 28px;
   margin-bottom: 20px;
